--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+html {
+  height: 100%;
+  background: radial-gradient(circle at 10% 20%, rgb(0, 0, 0) 0%, rgb(22, 22, 22) 90.2%);
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -18,13 +23,12 @@ body {
 .test {
   display: flex;
   width: auto;
-  height: 1vh auto;
-  background: black;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: 30px;
  color: white;
+
 }
 
 .slider {
@@ -32,7 +36,6 @@ body {
   width: 400px;
   height: 10px;
   border-radius: 5px;  
-  background-color: rgb(164,255,175);
   outline: none;
   opacity: 0.7;
   -webkit-transition: .2s;
@@ -46,9 +49,12 @@ body {
   width: 25px;
   height: 25px;
   border-radius: 50%; 
-  background: #04AA6D;
+  background: #09c27e;
   cursor: pointer;
 }
+
+
+
 
 .slider:hover {
   opacity: 1;
@@ -116,7 +122,7 @@ body {
 .checkboxdiv {
   margin-right: 120px;
   font-size: 20px;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
   margin-left: 20px;
 }
 
@@ -130,7 +136,7 @@ body {
 }
 
 .checkin {
-  accent-color: rgb(164,255,175);
+  accent-color: #a4ffaf;
   cursor: pointer;
 }
 
@@ -156,3 +162,16 @@ body {
   transition: box-shadow .1s;
 
 }
+
+.own-characters {
+  opacity:100;
+}
+
+.counter {
+  font-size: 17px;
+  margin-bottom: -15px;
+  color:rgb(207, 209, 210); 
+  opacity: 0;
+}
+
+
