--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 html {
   height: 100%;
-  background: radial-gradient(circle at 10% 20%, rgb(0, 0, 0) 0%, rgb(22, 22, 22) 90.2%);
+  background: radial-gradient(
+    circle at 10% 20%,
+    rgb(0, 0, 0) 0%,
+    rgb(22, 22, 22) 90.2%
+  );
 }
 
 body {
@@ -13,33 +17,31 @@ body {
   margin-top: 15px;
 }
 
-.slider-value{
+.slider-value {
   position: relative;
   left: 210px;
   bottom: 2px;
 }
 
-
 .test {
   display: flex;
   width: auto;
- flex-direction: column;
- align-items: center;
- justify-content: center;
- font-size: 30px;
- color: white;
-
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  color: white;
 }
 
 .slider {
   -webkit-appearance: none;
   width: 400px;
   height: 10px;
-  border-radius: 5px;  
+  border-radius: 5px;
   outline: none;
   opacity: 0.7;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
   margin-left: 20px;
 }
 
@@ -48,13 +50,10 @@ body {
   appearance: none;
   width: 25px;
   height: 25px;
-  border-radius: 50%; 
+  border-radius: 50%;
   background: #09c27e;
   cursor: pointer;
 }
-
-
-
 
 .slider:hover {
   opacity: 1;
@@ -64,27 +63,25 @@ body {
   width: 25px;
   height: 25px;
   border-radius: 50%;
-  background: #04AA6D;
+  background: #04aa6d;
   cursor: pointer;
 }
-
-
 
 .mainbox {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  background-color: rgb(36,35,43);
+  background-color: rgb(36, 35, 43);
   align-items: center;
   width: 450px;
-  height: 400px; 
+  height: 400px;
   margin-top: -40px;
 }
 
 .kod {
   height: 65px;
   width: 450px;
-  background-color: rgb(36,35,43);
+  background-color: rgb(36, 35, 43);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -95,7 +92,7 @@ body {
   height: 58px;
   width: 400px;
   font-size: 30px;
-  background-color: rgb(164,255,175);
+  background-color: rgb(164, 255, 175);
   border: none;
   cursor: pointer;
   margin-top: 25px;
@@ -110,10 +107,7 @@ body {
   justify-content: center;
   align-items: center;
   font-size: 25px;
-
 }
-
-
 
 .charlength {
   font-size: 20px;
@@ -140,7 +134,7 @@ body {
   cursor: pointer;
 }
 
-.copybutton{
+.copybutton {
   cursor: pointer;
   width: 60px;
   height: 40px;
@@ -152,26 +146,45 @@ body {
   top: -52px;
 }
 
-.generator:hover{
-  background-color:rgb(194, 252, 184);
-  transition: background-color .2s;
+.generator:hover {
+  background-color: rgb(194, 252, 184);
+  transition: background-color 0.2s;
 }
 
-.generator:active{
-  box-shadow: 2px -10px 70px -14px rgba(0,0,0,0.24) inset;
-  transition: box-shadow .1s;
-
+.generator:active {
+  box-shadow: 2px -10px 70px -14px rgba(0, 0, 0, 0.24) inset;
+  transition: box-shadow 0.1s;
 }
 
 .own-characters {
-  opacity:100;
+  opacity: 100;
 }
 
 .counter {
   font-size: 17px;
   margin-bottom: -15px;
-  color:rgb(207, 209, 210); 
+  color: rgb(207, 209, 210);
   opacity: 0;
 }
 
+.myownletters {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+  height: 25px;
+  width: 50px;
+  opacity: 100;
+}
 
+.hidden {
+  margin-top: 0px;
+  height: 0px;
+  width: 0px;
+  opacity: 0;
+}
+
+.textbox {
+  margin-right: 10px;
+  border-style: solid;
+  border-color: rgb(164, 255, 175);
+}
