--- a/style.css
+++ b/style.css
@@ -187,4 +187,10 @@ body {
   margin-right: 10px;
   border-style: solid;
   border-color: rgb(164, 255, 175);
+  background-color: #a4ffaf;
+  color: rgb(36, 34, 34);
+}
+
+.text{
+  margin-left: 6px;
 }
